# openaltid-bot-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  docker-compose.yml  dockerfile  rustfmt.toml  scratch
.github/workflows/: rust.yml
src/: application_commands.rs  main.rs  mongo_conn.rs  redis_check_loop.rs  startup.rs
src/commands/: mod.rs
src/commands/common/: interaction_error.rs  mod.rs  permissions_check.rs  slash_commands.rs
src/commands/manage/: currentsettings.rs  editverifysettings.rs  mod.rs  setage.rs  setlogchannel.rs  setmodrole.rs  setverificaitonrole.rs
src/commands/misc/: ping.rs
src/commands/music/: play.rs
src/commands/verification/: add_connection.rs  mod.rs  remove_connection.rs  verify.rs
src/dbmodels/: guild.rs
