[package]
name = "ironic_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
redis = { version = "0.21.4", features = ["tokio-comp"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.4"
serde_json = "1.0.73"
rand = "0.8.4"
chrono = "0.4.19"

[dependencies.serenity]
version = "0.10.10"
features = ["unstable_discord_api"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1.0.132"
features = ["derive"]
